--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,6 +27,13 @@ input[type=button] {
     border-radius: 50%;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%; }
+    .header .circleClose .circleText {
+      color: red;
+      text-align: center;
+      padding: 15%;
+      cursor: pointer; }
+      .header .circleClose .circleText:hover {
+        color: #fff; }
   .header .circleMin {
     position: absolute;
     left: 8%;
@@ -37,12 +44,12 @@ input[type=button] {
     border-radius: 50%;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%; }
-    .header .circleMin .circleMinText {
+    .header .circleMin .circleText {
       color: orange;
       text-align: center;
-      padding: 2px;
+      padding: 15%;
       cursor: pointer; }
-      .header .circleMin .circleMinText:hover {
+      .header .circleMin .circleText:hover {
         color: #fff; }
   .header .circlePlus {
     position: absolute;
@@ -54,6 +61,13 @@ input[type=button] {
     border-radius: 50%;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%; }
+    .header .circlePlus .circleText {
+      color: green;
+      text-align: center;
+      padding: 15%;
+      cursor: pointer; }
+      .header .circlePlus .circleText:hover {
+        color: #fff; }
 
 .main {
   width: 100%;
@@ -74,7 +88,8 @@ input[type=button] {
     -webkit-box-shadow: 0px 0px 10px 0px #101010 inset; }
   .main .calMainText {
     margin: 20px 0px 20px 0px;
-    font-size: 60px;
+    font-size: 13vw;
+    height: 16vw;
     color: #fff;
     font-weight: 100;
     text-align: right;
@@ -90,6 +105,8 @@ input[type=button] {
     width: 100%;
     margin-top: 8px;
     border-spacing: 2.2vw 2vh; }
+    .footer .cal td {
+      width: 25%; }
   .footer .buttondiv {
     border-radius: 8px;
     -moz-border-radius: 8px;
@@ -168,16 +185,34 @@ input[type=button] {
 
 @keyframes scaleAni {
   from {
-    transform: scale(1, 1); }
+    transform: scale(1, 1);
+    -webkit-transform: scale(1, 1);
+    -o-transform: scale(1, 1);
+    -moz-transform: scale(1, 1); }
   to {
     transform: scale(0, 0);
-    transform-origin: 10% 95%; } }
+    -webkit-transform: scale(0, 0);
+    -o-transform: scale(0, 0);
+    -moz-transform: scale(0, 0);
+    transform-origin: 10% 95%;
+    -webkit-transform-origin: 10% 95%;
+    -o-transform-origin: 10% 95%;
+    -moz-transform-origin: 10% 95%; } }
 @keyframes scaleAniBack {
   from {
     transform: scale(0, 0);
-    transform-origin: 10% 95%; }
+    -webkit-transform: scale(0, 0);
+    -o-transform: scale(0, 0);
+    -moz-transform: scale(0, 0);
+    transform-origin: 10% 95%;
+    -webkit-transform-origin: 10% 95%;
+    -o-transform-origin: 10% 95%;
+    -moz-transform-origin: 10% 95%; }
   to {
-    transform: scale(1, 1); } }
+    transform: scale(1, 1);
+    -webkit-transform: scale(1, 1);
+    -o-transform: scale(1, 1);
+    -moz-transform: scale(1, 1); } }
 @keyframes opactityAni {
   0% {
     display: none;
@@ -229,6 +264,10 @@ input[type=button] {
     border-radius: 50%;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%; }
+
+  .main .calMainText {
+    font-size: 65px;
+    height: 80px; }
 
   .tablediv {
     display: table;
